--- a/https:/open-source-life.jp/index.html
+++ b/https:/open-source-life.jp/index.html
@@ -68,10 +68,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="open-source-life.jp"><img alt="Zeroidea Homepage" src="https://open-source-life.jp/images/logo-zeroidea-regular-separate.svg" /></a>
+      <a href="open-source-life.jp"><img alt="Zeroidea Homepage" src="open-source-life.jp/images/logo-zeroidea-regular-separate.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="open-source-life.jp"><img alt="Zeroidea Homepage" src="https://open-source-life.jp/logo-mobile-zi-regular-zi.svg" /></a>
+      <a href="open-source-life.jp"><img alt="Zeroidea Homepage" src="open-source-life.jp/images/logo-mobile-zi-regular-zi.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -167,7 +167,7 @@
       <div class="service service-summary">
 
   <div class="service-image">
-    <img src="open-source-life.jpservices/service-icon-6.png"/>
+    <img src="open-source-life.jp/services/service-icon-6.png"/>
   </div>
 
   <div class="service-content">
@@ -184,7 +184,7 @@
       <div class="service service-summary">
 
   <div class="service-image">
-    <img src="open-source-life.jpservices/service-icon-1.png"/>
+    <img src="open-source-life.jp/services/service-icon-1.png"/>
   </div>
 
   <div class="service-content">
